# rebuilding-milo-chatbot

./: .dockerignore  .env.example  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/api/: app.py
src/api/static/: index.html
src/embeddings/: embedder.py
src/ingestion/: ingest_pipeline.py  pdf_loader.py  splitter.py  text_cleaner.py  tokenizer.py
src/llm/: prompt.py
src/pipeline/: index_pipeline.py  query_pipeline.py
src/reranker/: __init__.py  cross_encoder.py  dynamic.py
src/vectorstore/: pinecone_store.py
